style.css
body {
    margin: 0;
    display: flex;
    flex-direction: column;
    font-family: roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.firstSlide,
.secondSlide,
.thirdSlide,
.fourthSlide,
.footer {
    padding-bottom: 60px !important;
}


/* FIRST SLIDE */

.firstSlide {
    background-color: #1F2937;
    padding: 0px 200px;
}

.header {
    margin-top: 20px;
    display: flex;
    margin-bottom: 75px;
}

.headerLogo {
    font-weight: bolder;
    font-size: 24px;
    color: #F9FAF8;
}

.links {
    display: flex;
    justify-content: right;
    flex: 1;
    gap: 16px;
}

a {
    text-decoration: none;
    color: #E5E7EB;
}

.firstSlideContent {
    display: flex;
    justify-content: space-between;
    gap: 150px;
}

.firstSplit {
    display: flex;
    flex-direction: column;
    gap: 16px;
    min-width: 300px;
}

.links,
.subtext {
    font-size: 18px;
    color: #E5E7EB;
}

.subtext {
    max-width: 450px;
    font-weight: 300;
}

.title {
    font-size: 48px;
    font-weight: 700;
    color: #F9FAF8;
    max-width: 400px;
}

.signUpButton {
    color: white;
    background: #3882F6;

    font-weight: bold;

    max-width: 120px;
    border: 0;
    border-radius: 10px;

    padding: 15px;
    width: 215px;
    height: 35px;

    display: flex;
    align-items: center;
    justify-content: center;
    
    font-size: 1.05em;
    transition: all 0.5s;
    cursor: pointer;
}

.signUpButton span {
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.5s;
}

.signUpButton span:after {
    content: '\00bb';
    position: absolute;
    opacity: 0;
    top: 0;
    right: -20px;
    transition: 0.5s;
}

.signUpButton:hover span {
    padding-right: 25px;
}

.signUpButton:hover span:after {
    opacity: 1;
    right: 0;
}

.imageBox1 {
    display: flex;
    background-color: rgba(229, 231, 235, 12);
    width: 500px;
    height: 250px;
    flex-direction: column;
    min-width: 200px;
}


/* SECOND SLIDE */

.secondSlide {
    padding-top: 32px;
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 36px;
}

.infoHeader {
    font-size: 36px;
    font-weight: 700;
    color: #1F2937;
}

.collection {
    display: flex;
    gap: 48px;
}

.box {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8px;
}

.pic {
    border: 3px solid #3882F6;
    width: 150px;
    height: 150px;
    border-radius: 25px;
}

.text {
    max-width: 150px;
    text-align: center;
}


/* THIRD SLIDE */ 

.thirdSlide {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;

    justify-content: center;
    align-items: center;

    padding-top: 60px;
}

.quote {
    font-style: italic;
    font-weight: 280;
    color: #1F2937;
    font-size: 36px;
    max-width: 780px;
    min-width: 780px;
    
}

.author {
    align-self: flex-end;
    font-size: 22px;
    padding-right: 200px;
    font-weight: bolder;
}


/* FOURTH SLIDE */ 

.fourthSlide {

}


/* FOOTER */

.footer {
    background-color: #1F2937;
}

/* start: 15 ago, 20:06 */
/* to do:
 * 1.
 * 2. 
 * 3.
*/
/* end:                 */

